<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="590dp"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_app3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/btn_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@color/material_on_surface_stroke"
                    android:src="@drawable/ic_favorite_border_white_48dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/cv_avatar_detail"
                    app:layout_constraintTop_toTopOf="parent" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/cv_avatar_detail"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_marginTop="60dp"
                    android:src="@drawable/user1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_name_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/poppins"
                    android:gravity="center"
                    android:text="@string/lukas_prasetya"
                    android:textColor="@color/colorTextWhite"
                    android:textSize="26sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cv_avatar_detail" />

                <TextView
                    android:id="@+id/tv_username_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:layout_marginEnd="60dp"
                    android:fontFamily="@font/poppins"
                    android:gravity="center"
                    android:text="@string/lukasprasetya"
                    android:textColor="@color/colorTextWhite"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_name_detail" />

                <TextView
                    android:id="@+id/tv_location_detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/poppins"
                    android:gravity="center"
                    android:paddingStart="40dp"
                    android:paddingEnd="40dp"
                    android:text="@string/new_york_ny"
                    android:textColor="@color/colorTextWhite"
                    android:textSize="16sp"
                    app:drawableStartCompat="@drawable/ic_pin"
                    app:layout_constraintEnd_toEndOf="@id/cv_avatar_detail"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@id/cv_avatar_detail"
                    app:layout_constraintTop_toBottomOf="@id/tv_username_detail" />

                <TextView
                    android:id="@+id/tv_icon_building"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    app:drawableStartCompat="@drawable/ic_building"
                    app:layout_constraintEnd_toEndOf="@id/tv_company"
                    app:layout_constraintStart_toStartOf="@id/tv_company"
                    app:layout_constraintTop_toBottomOf="@id/tv_location_detail" />

                <TextView
                    android:id="@+id/tv_icon_repo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    app:drawableStartCompat="@drawable/ic_repo"
                    app:layout_constraintEnd_toEndOf="@id/tv_repo"
                    app:layout_constraintStart_toStartOf="@id/tv_repo"
                    app:layout_constraintTop_toBottomOf="@id/tv_location_detail" />

                <TextView
                    android:id="@+id/tv_company"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:gravity="center"
                    android:text="@string/company"
                    android:textColor="@color/colorTextWhite"
                    android:textSize="8sp"
                    app:layout_constraintEnd_toStartOf="@id/tv_repo"
                    app:layout_constraintStart_toStartOf="@id/tv_username_detail"
                    app:layout_constraintTop_toBottomOf="@id/tv_icon_building"
                    tools:ignore="SmallSp" />

                <TextView
                    android:id="@+id/tv_repo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:gravity="center"
                    android:text="@string/repository"
                    android:textColor="@color/colorTextWhite"
                    android:textSize="8sp"
                    app:layout_constraintEnd_toEndOf="@id/tv_username_detail"
                    app:layout_constraintStart_toEndOf="@id/tv_company"
                    app:layout_constraintTop_toBottomOf="@id/tv_icon_building"
                    tools:ignore="SmallSp" />

                <TextView
                    android:id="@+id/tv_company_detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:gravity="center"
                    android:text="@string/google"
                    android:textColor="@color/colorTextWhite"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@id/tv_company"
                    app:layout_constraintStart_toStartOf="@id/tv_company"
                    app:layout_constraintTop_toBottomOf="@id/tv_company" />

                <TextView
                    android:id="@+id/tv_repo_detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:gravity="center"
                    android:text="@string/_24"
                    android:textColor="@color/colorTextWhite"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@id/tv_repo"
                    app:layout_constraintStart_toStartOf="@id/tv_repo"
                    app:layout_constraintTop_toBottomOf="@id/tv_company" />

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="#00000000"
                    android:minHeight="?actionBarSize"
                    app:layout_constraintTop_toBottomOf="@id/tv_company_detail"
                    app:tabIndicatorFullWidth="false"
                    app:tabIndicatorHeight="2dp"
                    app:tabMode="fixed"
                    app:tabRippleColor="@null"
                    app:tabTextColor="@color/colorTextWhite" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <ProgressBar
        android:id="@+id/progressBar_detail"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="fill_vertical"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorTextWhite" />

    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>